<resources>
    <string name="app_name">Court_Counter</string>

    <string name="game_title">Game Score</string>

    <string name="team_a_name">Team A</string>

    <string name="team_b_name">Team B</string>

    <string name="three_points">+3 points</string>

    <string name="tow_points">+2 points</string>

    <string name="one_points">free Throw</string>

    <string name="reset">Reset</string>
</resources>
