<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.hazimfenjan.second_project_gameaandb.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/b"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/game-score"
            style="@style/title_text_style"
            android:text="@string/game_title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/game-score"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/team_text_style"
                    android:text="@string/team_a_name" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/team_score_text_style"
                    android:fontFamily="sans-serif-light"
                    android:text="0" />

                <Button
                    style="@style/button_text_style"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/three_points" />

                <Button
                    style="@style/button_text_style"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/tow_points" />

                <Button
                    style="@style/button_text_style"
                    android:onClick="addOneForTeamA"
                    android:text="@string/one_points" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:background="#000"
                tools:ignore="ExtraText"></View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/team_text_style"
                    android:text="@string/team_b_name" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/team_score_text_style"
                    android:fontFamily="sans-serif-light"
                    android:text="0" />

                <Button
                    style="@style/button_text_style"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/three_points" />

                <Button
                    style="@style/button_text_style"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/tow_points" />

                <Button
                    style="@style/button_text_style"
                    android:onClick="addOneForTeamB"
                    android:text="@string/one_points" />
            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/reset_button_text_style"
            android:onClick="reset"
            android:text="@string/reset" />

    </RelativeLayout>

</ScrollView>


